--- a/ebook.html
+++ b/ebook.html
@@ -282,7 +282,7 @@
             </h1>
 
             <!-- Text -->
-            <p class="lead text-muted mb-6 mb-md-8">
+            <p class="lead text-gray-700 mb-6 mb-md-8">
               Maximize the potential of LinkedIn data and understand the nuances of data enrichment with our ultimate eBook. Learn about the various data points you can obtain for people and company profiles and discover the powerful APIs and top-notch datasets we have to meet all your data needs.
             </p>
 
@@ -341,6 +341,10 @@
         <div class="row">
 
           <div class="col-12">
+
+            <h3 class="display-3 font-weight-bold mb-6 text-center">
+              Download Free eBook
+            </h3>
 
             <div class="card card-border border-primary shadow-light-lg">
               <div class="card-body">
@@ -413,7 +417,7 @@
     <section class="pt-8 pb-9 pt-md-11 pb-md-10 bg-light border-bottom">
       <div class="container-fluid" style="max-width: 1280px;">
   
-        <div class="row pb-6 pb-md-4">
+        <div class="row mb-6 mb-md-4">
   
           <div class="col-12 col-md-6">
             
@@ -681,6 +685,366 @@
             
           </div>
         </div>
+      </div> <!-- / .container -->
+    </section>
+
+    <!-- THIRD FOLD
+    ================================================== -->
+    <section class="pt-8 pb-9 pt-md-11 pb-md-10 border-bottom">
+
+      <div class="container-fluid" style="max-width: 1280px;">
+  
+        <div class="row justify-content-center">
+
+          <div class="col-12">
+            <h3 class="font-weight-bold display-4 mb-8">
+              Table of content
+            </h3>
+          </div>
+
+          <div class="col-12 col-md-6">
+
+            <div class="d-flex">
+
+              <div class="badge badge-lg badge-primary-soft badge-rounded-circle mr-2">
+                <span>1</span>
+              </div>
+
+              <div class="ms-5">
+
+                <h3 class="font-weight-bold">
+                  The Software Engineers’ Guide To LinkedIn Data?
+                </h3>
+
+                <p class="text-gray-700 mb-6">
+                  <i class="fe fe-chevron-right"></i> 50 Types & Specifications of LinkedIn Data 
+                </p>
+
+              </div>
+
+            </div>
+
+            <div class="d-flex">
+
+              <div class="badge badge-lg badge-primary-soft badge-rounded-circle mr-2">
+                <span>2</span>
+              </div>
+
+              <div class="ms-5">
+
+                <h3 class="font-weight-bold">
+                  Ultimate Guide To The Official LinkedIn API For CTOs
+                </h3>
+
+                <p class="text-gray-700 mb-2">
+                  <i class="fe fe-chevron-right"></i> 5 Alternatives To The Official LinkedIn API<br>
+                    <span class="ml-5 text-muted">i.  Proxycurl API</span> <br>
+                    <span class="ml-5 text-muted">ii. Coresignal</span> <br>
+                    <span class="ml-5 text-muted">iii. Peopledatalabs (PDL)</span> <br>
+                    <span class="ml-5 text-muted">iv. Bright Data</span> <br>
+                    <span class="ml-5 text-muted">v. PhantomBuster</span>
+                </p>
+
+                <p class="text-gray-700 mb-6">
+                  <i class="fe fe-chevron-right"></i> LinkedIn Data Enrichment With Suite Of Proxycurl Products<br>
+                    <span class="ml-5 text-muted">i. Proxycurl API- Enrich Profiles With Our LinkedIn Scraping API</span> <br>
+                    <span class="ml-5 text-muted">ii. LinkDB-LinkedIn Dataset of 401M+ People & Companies Profiles</span> <br>
+                </p>
+
+              </div>
+
+            </div>
+
+            <div class="d-flex">
+
+              <div class="badge badge-lg badge-primary-soft badge-rounded-circle mr-2">
+                <span>3</span>
+              </div>
+
+              <div class="ms-5">
+
+                <h3 class="font-weight-bold">
+                  The Ultimate Guide To Proxycurl’s LinkedIn Enrichment API 
+                </h3>
+
+                <p class="text-gray-700 mb-2">
+                  <i class="fe fe-chevron-right"></i> How To Get LinkedIn People Data (With API Python Examples)
+                </p>
+
+                <p class="text-gray-700 mb-2">
+                  <i class="fe fe-chevron-right"></i> How To Get LinkedIn Company Data (With API Python Examples) 
+                </p>
+
+                <p class="text-gray-700 mb-2">
+                  <i class="fe fe-chevron-right"></i> How To Get LinkedIn Job Data (With API Python Examples) 
+                </p>
+
+                <p class="text-gray-700 mb-6">
+                  <i class="fe fe-chevron-right"></i> How To Get LinkedIn Contact Data (With API Python Examples) 
+                </p>
+
+              </div>
+
+            </div>
+
+            <div class="d-flex">
+
+              <div class="badge badge-lg badge-primary-soft badge-rounded-circle mr-2">
+                <span>4</span>
+              </div>
+
+              <div class="ms-5">
+
+                <h3 class="font-weight-bold">
+                  Actual Examples Of How Companies Use Proxycurl LinkedIn APIs & LinkDB Datasets
+                </h3>
+
+                <p class="text-gray-700 mb-2">
+                  <i class="fe fe-chevron-right"></i> Growth Startups: Build A List Of Your Ideal Customer Profile
+                </p>
+
+                <p class="text-gray-700 mb-2">
+                  <i class="fe fe-chevron-right"></i> Automate Sales & Marketing: Spot Decision Makers, Buy Signals 
+                </p>
+
+                <p class="text-gray-700 mb-2">
+                  <i class="fe fe-chevron-right"></i> Investments: Identify Buy Signals Powered By Alternative Data
+                </p>
+
+                <p class="text-gray-700 mb-6">
+                  <i class="fe fe-chevron-right"></i> HR: Hire Top Candidates, Get Their Personal Contact Info 
+                </p>
+
+              </div>
+
+            </div>
+
+          </div>
+
+          <div class="col-12 col-md-6">
+            <img class="img img-fluid rounded mb-4" alt="lorem" src="illustration_placement_portrait.png">
+          </div>
+
+        </div>
+  
+      </div> <!-- / .container -->
+
+    </section>
+
+    <!-- 3 ACTUAL PAGES FOLD
+    ================================================== -->
+    <section class="pt-8 pb-9 pt-md-11 pb-md-10 border-bottom">
+
+      <div class="container-fluid" style="max-width: 1280px;">
+  
+        <div class="row align-items-center">
+
+          <div class="col-12">
+            <h3 class="font-weight-bold display-4 mb-8">
+              See what inside
+            </h3>
+          </div>
+
+          <div class="col-12 col-md-6">
+
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner rounded">
+                <div class="carousel-item active">
+                  <img class="d-block w-100" src="illustration_placement_portrait.png" alt="First slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="illustration_placement_portrait.png" alt="Second slide">
+                </div>
+                <div class="carousel-item">
+                  <img class="d-block w-100" src="illustration_placement_portrait.png" alt="Third slide">
+                </div>
+              </div>
+              <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
+
+          </div>
+
+          <div class="col-12 col-md-6">
+
+            <h3 class="font-weight-bold h2 mb-6">
+              Everything you need to know with LinkedIn Data Enrichment Of People & Company Profiles
+            </h3>
+
+            <div class="d-flex mb-4">
+
+              <div class="badge badge-lg badge-success badge-rounded-circle mt-2 mr-2">
+                <span><i class="fe fe-check"></i></span>
+              </div>
+
+              <div class="ms-5">
+
+                <h3 class="lead">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                </h3>
+
+              </div>
+
+            </div>
+
+            <div class="d-flex mb-4">
+
+              <div class="badge badge-lg badge-success badge-rounded-circle mt-2 mr-2">
+                <span><i class="fe fe-check"></i></span>
+              </div>
+
+              <div class="ms-5">
+
+                <h3 class="lead">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                </h3>
+
+              </div>
+
+            </div>
+
+            <div class="d-flex mb-4">
+
+              <div class="badge badge-lg badge-success badge-rounded-circle mt-2 mr-2">
+                <span><i class="fe fe-check"></i></span>
+              </div>
+
+              <div class="ms-5">
+
+                <h3 class="lead">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                </h3>
+
+              </div>
+
+            </div>
+
+            <div class="d-flex mb-4">
+
+              <div class="badge badge-lg badge-success badge-rounded-circle mt-2 mr-2">
+                <span><i class="fe fe-check"></i></span>
+              </div>
+
+              <div class="ms-5">
+
+                <h3 class="lead">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                </h3>
+
+              </div>
+
+            </div>
+
+            <div class="d-flex mb-4">
+
+              <div class="badge badge-lg badge-success badge-rounded-circle mt-2 mr-2">
+                <span><i class="fe fe-check"></i></span>
+              </div>
+
+              <div class="ms-5">
+
+                <h3 class="lead">
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                </h3>
+
+              </div>
+
+            </div>
+
+          </div>
+
+        </div>
+  
+      </div> <!-- / .container -->
+
+    </section>
+
+    <!-- CTA
+    ================================================== -->
+    <section class="pt-md-11 py-8 pb-md-12 bg-light border-bottom">
+      <div class="container-fluid" style="max-width: 1280px;">
+        <div class="row">
+
+          <div class="col-12">
+
+            <h3 class="display-3 font-weight-bold mb-6 text-center">
+              Download Free eBook
+            </h3>
+
+            <div class="card card-border border-primary shadow-light-lg">
+              <div class="card-body">
+
+                <!-- Form -->
+                <form>
+
+                  <div class="row">
+
+                    <div class="col-12 col-md-6">
+
+                      <div class="form-group mb-5">
+                        <label class="form-label" for="applyName">Full name</label>
+                        <input class="form-control" id="applyName" type="text" placeholder="Full name">
+                      </div>
+
+                    </div>
+
+                    <div class="col-12 col-md-6">
+
+                      <div class="form-group mb-5">
+                        <label class="form-label" for="applyEmail">Email</label>
+                        <input class="form-control" id="applyEmail" type="email" placeholder="example@domain.com">
+                      </div>
+
+                    </div>
+
+                    <div class="col-12">
+
+                      <div class="form-group mb-5">
+                        <label class="form-label" for="applyEmail">Company (optional)</label>
+                        <input class="form-control" id="applyCompany" type="text" placeholder="Acme Inc">
+                      </div>
+
+                    </div>
+
+                  </div> <!-- / .row -->
+
+                  <div class="row align-items-center">
+                    <div class="col-12 col-md">
+
+                      <!-- Submit -->
+                      <button class="btn btn-primary mb-6 mb-md-0 lift">
+                        Download now <i class="fe fe-arrow-right ms-3"></i>
+                      </button>
+
+                    </div>
+                    <div class="col-12 col-md-auto">
+
+                      <p class="fs-sm text-muted mb-0">
+                        Download link will be send securely and remain private
+                      </p>
+
+                    </div>
+                  </div> <!-- / .row -->
+
+                </form>
+
+              </div>
+            </div>
+
+          </div>
+
+        </div> <!-- / .row -->
       </div> <!-- / .container -->
     </section>
 
