--- a/ebook.html
+++ b/ebook.html
@@ -276,8 +276,8 @@
           <div class="col-12 col-md-7 pr-md-10 order-md-1" data-aos="fade-up">
             
             <!-- Heading -->
-            <h1 class="display-3 font-weight-bold">
-              Ultimate Guide To LinkedIn Data Enrichment Of People & Company Profiles -
+            <h1 class="display-2 font-weight-bold">
+              Ultimate Guide To LinkedIn Data Enrichment Of People & Company Profiles -<br>
               <span class="text-primary">For CTOs & Software Engineers</span>.
             </h1>
 
@@ -290,126 +290,6 @@
         </div> <!-- / .row -->
       </div> <!-- / .container -->
 
-    </section>
-
-    <!-- IMAGE
-    ================================================== -->
-    <section class="py-8 py-md-11">
-      <div class="container-fluid" style="max-width: 1280px;">
-        <div class="row">
-
-          <div class="col-12 col-md-6" data-aos="fade-up">
-
-            <img class="img img-fluid rounded mb-4" alt="lorem" src="illustration_placement_portrait.png">
-
-            <!-- Heading -->
-            <h3 class="font-weight-bold">
-              Lorem ipsum title
-            </h3>
-
-            <!-- Text -->
-            <p class="text-muted mb-6 mb-md-0">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-
-          </div>
-
-          <div class="col-12 col-md-6" data-aos="fade-up" data-aos-delay="50">
-
-            <img class="img img-fluid rounded mb-4" alt="lorem" src="illustration_placement_portrait.png">
-
-            <!-- Heading -->
-            <h3 class="font-weight-bold">
-              Lorem ipsum title
-            </h3>
-
-            <!-- Text -->
-            <p class="text-muted mb-6 mb-md-0">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-            </p>
-
-          </div>
-
-        </div> <!-- / .row -->
-      </div> <!-- / .container -->
-    </section>
-
-    <!-- CTA
-    ================================================== -->
-    <section class="py-8 pb-md-12 border-bottom">
-      <div class="container-fluid" style="max-width: 1280px;">
-        <div class="row">
-
-          <div class="col-12">
-
-            <h3 class="display-3 font-weight-bold mb-6 text-center">
-              Download Free eBook
-            </h3>
-
-            <div class="card card-border border-primary shadow-light-lg">
-              <div class="card-body">
-
-                <!-- Form -->
-                <form>
-
-                  <div class="row">
-
-                    <div class="col-12 col-md-6">
-
-                      <div class="form-group mb-5">
-                        <label class="form-label" for="applyName">Full name</label>
-                        <input class="form-control" id="applyName" type="text" placeholder="Full name">
-                      </div>
-
-                    </div>
-
-                    <div class="col-12 col-md-6">
-
-                      <div class="form-group mb-5">
-                        <label class="form-label" for="applyEmail">Email</label>
-                        <input class="form-control" id="applyEmail" type="email" placeholder="example@domain.com">
-                      </div>
-
-                    </div>
-
-                    <div class="col-12">
-
-                      <div class="form-group mb-5">
-                        <label class="form-label" for="applyEmail">Company (optional)</label>
-                        <input class="form-control" id="applyCompany" type="text" placeholder="Acme Inc">
-                      </div>
-
-                    </div>
-
-                  </div> <!-- / .row -->
-
-                  <div class="row align-items-center">
-                    <div class="col-12 col-md">
-
-                      <!-- Submit -->
-                      <button class="btn btn-primary mb-6 mb-md-0 lift">
-                        Download now <i class="fe fe-arrow-right ms-3"></i>
-                      </button>
-
-                    </div>
-                    <div class="col-12 col-md-auto">
-
-                      <p class="fs-sm text-muted mb-0">
-                        Download link will be send securely and remain private
-                      </p>
-
-                    </div>
-                  </div> <!-- / .row -->
-
-                </form>
-
-              </div>
-            </div>
-
-          </div>
-
-        </div> <!-- / .row -->
-      </div> <!-- / .container -->
     </section>
 
     <!-- SECOND FOLD
@@ -698,7 +578,7 @@
 
           <div class="col-12">
             <h3 class="font-weight-bold display-4 mb-8">
-              Table of content
+              See What's Inside
             </h3>
           </div>
 
@@ -822,30 +702,6 @@
           </div>
 
           <div class="col-12 col-md-6">
-            <img class="img img-fluid rounded mb-4" alt="lorem" src="illustration_placement_portrait.png">
-          </div>
-
-        </div>
-  
-      </div> <!-- / .container -->
-
-    </section>
-
-    <!-- 3 ACTUAL PAGES FOLD
-    ================================================== -->
-    <section class="pt-8 pb-9 pt-md-11 pb-md-10 border-bottom">
-
-      <div class="container-fluid" style="max-width: 1280px;">
-  
-        <div class="row align-items-center">
-
-          <div class="col-12">
-            <h3 class="font-weight-bold display-4 mb-8">
-              See what inside
-            </h3>
-          </div>
-
-          <div class="col-12 col-md-6">
 
             <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
               <ol class="carousel-indicators">
@@ -872,94 +728,6 @@
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="sr-only">Next</span>
               </a>
-            </div>
-
-          </div>
-
-          <div class="col-12 col-md-6">
-
-            <h3 class="font-weight-bold h2 mb-6">
-              Everything you need to know with LinkedIn Data Enrichment Of People & Company Profiles
-            </h3>
-
-            <div class="d-flex mb-4">
-
-              <div class="badge badge-lg badge-success badge-rounded-circle mt-2 mr-2">
-                <span><i class="fe fe-check"></i></span>
-              </div>
-
-              <div class="ms-5">
-
-                <h3 class="lead">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                </h3>
-
-              </div>
-
-            </div>
-
-            <div class="d-flex mb-4">
-
-              <div class="badge badge-lg badge-success badge-rounded-circle mt-2 mr-2">
-                <span><i class="fe fe-check"></i></span>
-              </div>
-
-              <div class="ms-5">
-
-                <h3 class="lead">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                </h3>
-
-              </div>
-
-            </div>
-
-            <div class="d-flex mb-4">
-
-              <div class="badge badge-lg badge-success badge-rounded-circle mt-2 mr-2">
-                <span><i class="fe fe-check"></i></span>
-              </div>
-
-              <div class="ms-5">
-
-                <h3 class="lead">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                </h3>
-
-              </div>
-
-            </div>
-
-            <div class="d-flex mb-4">
-
-              <div class="badge badge-lg badge-success badge-rounded-circle mt-2 mr-2">
-                <span><i class="fe fe-check"></i></span>
-              </div>
-
-              <div class="ms-5">
-
-                <h3 class="lead">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                </h3>
-
-              </div>
-
-            </div>
-
-            <div class="d-flex mb-4">
-
-              <div class="badge badge-lg badge-success badge-rounded-circle mt-2 mr-2">
-                <span><i class="fe fe-check"></i></span>
-              </div>
-
-              <div class="ms-5">
-
-                <h3 class="lead">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                </h3>
-
-              </div>
-
             </div>
 
           </div>
